--- a/rpi2emulator.vcxproj.filters
+++ b/rpi2emulator.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="..\OnutOS\source\mem.h">
       <Filter>asm</Filter>
     </ClInclude>
+    <ClInclude Include="..\OnutOS\source\object.h">
+      <Filter>asm</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="asm">
@@ -64,6 +67,9 @@
       <Filter>asm</Filter>
     </None>
     <None Include="..\OnutOS\source\process.h">
+      <Filter>asm</Filter>
+    </None>
+    <None Include="..\OnutOS\source\object.S">
       <Filter>asm</Filter>
     </None>
   </ItemGroup>
